--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
             </div>
         </div>
         <div id="content">
+            <!-- content section -->
             <div class="content_section">
                 <!-- band content -->
-                <div class="band_heading">
+                <div class="heading">
                     The band
                 </div>
-                <div class="band_subheading">
+                <div class="subheading">
                     I love music
                 </div>
                 <div class="band_content">
@@ -73,10 +74,94 @@
                             <img src="./assets/img/content/bandmember.jpg" alt="band_member" title="member" class="member_img">
                     </div>                  
                 </div>
+                <div class="clear"></div>
             </div>
-
+            <!-- tour section -->
             <div class="tour_section">
-
+                <div class="heading">
+                    TOUR DATES
+                </div>
+                <div class="subheading">
+                    Remember to book your tickets!
+                </div>
+                <!-- ticket box -->
+                <div class="ticket_counter">
+                    <div class="status_ticket">
+                        <span class="month">
+                            Septemper
+                        </span>
+                        <span class="soldout">
+                            Sold out
+                        </span>
+                    </div>
+                    <div class="status_ticket">
+                        <span class="month">
+                            October
+                        </span>
+                        <span class="soldout">
+                            Sold out
+                        </span>
+                    </div>
+                    <div class="status_ticket">
+                        <span class="month">
+                            November
+                        </span>
+                        <span class="remain_ticket">
+                            3
+                        </span>
+                    </div>
+                </div>
+                <!-- tour place -->
+                <div class="place_section">
+                    <div class="place_list">
+                        <div class="place_item">
+                            <img src="./assets/img/placeTour/newyork.jpg" alt="" class="place_img">
+                            <div class="place_content">
+                                <div class="place_name">
+                                    New york
+                                </div>
+                                <div class="place_time">
+                                    Fri 27 Nov 2016
+                                </div>
+                                <div class="place_decription">
+                                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                                </div>
+                                <a href="#" class="place_btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="place_item">
+                            <img src="./assets/img/placeTour/paris.jpg" alt="" class="place_img">
+                            <div class="place_content">
+                                <div class="place_name">
+                                    Paris
+                                </div>
+                                <div class="place_time">
+                                    Sat 28 Nov 2016
+                                </div>
+                                <div class="place_decription">
+                                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                                </div>
+                                <a href="#" class="place_btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="place_item">
+                            <img src="./assets/img/placeTour/sanfran.jpg" alt="" class="place_img">
+                            <div class="place_content">
+                                <div class="place_name">
+                                    San Francisco
+                                </div>
+                                <div class="place_time">
+                                    Sun 29 Nov 2016
+                                </div>
+                                <div class="place_decription">
+                                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                                </div>
+                                <a href="#" class="place_btn">Buy Tickets</a>
+                            </div>
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
             </div>
 
             <div class="contact_section">
